# MiniLispLPD

./: .gitignore  README.md  mini-lisp-lpd.cabal  stack.yaml
app/: Main.hs
examples/: 01_sum.lsp  02_if.lsp  03_if0.lsp  04_let_sum.lsp  05_letstar.lsp  06_lambda_app.lsp  07_cond.lsp  08_comparators.lsp  09_lists_pairs.lsp  10_div0.lsp  11_sqrt_neg.lsp  12_expt.lsp  demo_eval.sh  demo_trace.sh
src/: Desugar.hs
src/Core/: AST.hs  Pretty.hs
src/Core/Eval/: Natural.hs  SOS.hs
src/Surface/: AST.hs  Lexer.x  Parser.hs
test/: Spec.hs
